--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
+*.translation
 
 # Godot-specific ignores
 .import/
@@ -13,3 +14,15 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# python
+__pycache__
+*.dblite
+
+# VSCode
+.vscode
+
+# C/C++
+*.dll
+*.so
+*.os
